crates/rpkl-runtime/tests/snapshots/snapshot_tests__list_to_set.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2371
expression: eval_pkl(source)
---
{
  "items": [
    1,
    2,
    2,
    3,
    3,
    3
  ],
  "s": [
    1,
    2,
    3
  ]
}
