crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing.snap
---
source: crates/pkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "items": [
    1,
    2,
    3
  ]
}
