crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_amendment.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "base": [
    1,
    2,
    3
  ],
  "amended": [
    1,
    2,
    3,
    4,
    5
  ]
}
