crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_filter.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3,
    4,
    5
  ],
  "r1": [
    3,
    4,
    5
  ]
}
