crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_fold.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3
  ],
  "r1": 6,
  "r2": "123"
}
