crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_join.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 1568
expression: eval_pkl(source)
---
{
  "items": [
    "a",
    "b",
    "c"
  ],
  "joined": "a, b, c"
}
