crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_length_is_empty.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l1": [
    1,
    2,
    3
  ],
  "r1": 3,
  "r2": false,
  "l2": [],
  "r3": 0,
  "r4": true
}
