crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_map.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
expression: eval_pkl(source)
---
{
  "l": [
    1,
    2,
    3
  ],
  "r1": [
    2,
    4,
    6
  ]
}
