crates/rpkl-runtime/tests/snapshots/snapshot_tests__listing_map_method.snap
---
source: crates/rpkl-runtime/tests/snapshot_tests.rs
assertion_line: 2418
expression: eval_pkl(source)
---
{
  "items": [
    1,
    2,
    3
  ],
  "doubled": [
    2,
    4,
    6
  ]
}
